<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".SplashActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/shrikhand"
        android:gravity="center"
        android:text="@string/title"
        android:textColor="@color/primary"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/phone_number"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phoneNumberEditText"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/manrope_medium"
            android:inputType="phone"
            android:letterSpacing="0.015"
            android:maxLines="1"
            android:textColor="@color/on_background"
            android:textColorHighlight="@color/background_variant"
            tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/continueButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/manrope_medium"
        android:text="@string/continue_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_max="500dp"
        tools:ignore="DuplicateClickableBoundsCheck" />

    <TextView
        android:id="@+id/invalidNumberText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_rectangle"
        android:backgroundTint="@color/error"
        android:fontFamily="@font/manrope_medium"
        android:padding="5dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/invalid_phone_number"
        android:textColor="@color/on_error"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/textField"
        app:layout_constraintStart_toStartOf="@+id/textField"
        app:layout_constraintTop_toBottomOf="@+id/textField" />


    <androidx.constraintlayout.widget.Group
        android:id="@+id/phoneNumberGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="textField,continueButton" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/verification_code"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/codeDescriptionText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/codeEditText"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/manrope_medium"
            android:inputType="phone"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/submitCodeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/manrope_medium"
        android:text="@string/submit_verification_code"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/codeDescriptionText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/manrope_medium"
        android:gravity="center"
        android:text="@string/code_sent_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/invalidCodeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_rectangle"
        android:backgroundTint="@color/error"
        android:fontFamily="@font/manrope_medium"
        android:padding="5dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/invalid_verification_code"
        android:textColor="@color/on_error"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/textField"
        app:layout_constraintStart_toStartOf="@+id/textField"
        app:layout_constraintTop_toBottomOf="@+id/textField2" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/codeGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="textField2,submitCodeButton,codeDescriptionText" />

    <ProgressBar
        android:id="@+id/loadingCircle"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>