<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/dialog_background"
        app:cardCornerRadius="35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_max="500dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="24dp"
            android:paddingVertical="24dp">

            <TextView
                android:id="@+id/inputDialog_titleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/manrope_medium"
                android:text="@string/choose_photo_from"
                android:textColor="@color/primary_text"
                android:textSize="24sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Space
                    android:id="@+id/space3"
                    android:layout_width="20dp"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/photoDialog_galleryButton"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@drawable/rounded_rectangle"
                    android:fontFamily="@font/manrope_medium"
                    android:text="@string/device_gallery"
                    app:icon="@drawable/icon_add_photo"
                    app:iconGravity="top"
                    app:iconSize="40dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/space3"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/photoDialog_curatedButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_rectangle"
                    android:fontFamily="@font/manrope_medium"
                    android:text="@string/curated_photos_library"
                    app:icon="@drawable/icon_auto_awsome"
                    app:iconGravity="top"
                    app:iconSize="40dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/space3"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:visibility="visible" />

            <Button
                android:id="@+id/photoDialog_cancelButton"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:fontFamily="@font/manrope_medium"
                android:paddingLeft="0dp"
                android:paddingTop="0dp"
                android:paddingRight="0dp"
                android:paddingBottom="0dp"
                android:text="@string/cancel"
                android:textColor="@color/primary_text"
                android:visibility="visible"
                app:strokeColor="@color/primary_text" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>