<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".SetupUserActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/shrikhand"
        android:gravity="center"
        android:text="@string/setup_profile_title"
        android:textColor="@color/on_background"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profilePhotoPreview"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/default_profile_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/phoneNumberPreview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="0501002030"
        android:textColor="@color/on_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profilePhotoPreview" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/user_name"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumberPreview">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userNameEditText"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/manrope_medium"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/on_background"
            android:textColorHighlight="@color/background_variant"
            tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/completeButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/manrope_medium"
        android:onClick="onCompleteButtonPressed"
        android:text="@string/complete_profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_max="500dp" />

    <Button
        android:id="@+id/uploadPhotoButton"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/manrope_medium"
        android:text="@string/upload_profile_photo"
        android:textColor="@color/on_tertiary"
        app:icon="@drawable/icon_add_photo"
        app:iconGravity="textStart"
        app:iconTint="@color/on_tertiary"
        app:layout_constraintEnd_toEndOf="@+id/textField"
        app:layout_constraintStart_toStartOf="@+id/textField"
        app:layout_constraintTop_toBottomOf="@+id/invalidNameError"
        app:rippleColor="#03FFFFFF"
        app:strokeColor="@color/on_tertiary" />

    <TextView
        android:id="@+id/invalidNameError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/rounded_rectangle"
        android:backgroundTint="@color/error"
        android:padding="5dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="please enter a valid number"
        android:textColor="@color/on_error"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/textField"
        app:layout_constraintStart_toStartOf="@+id/textField"
        app:layout_constraintTop_toBottomOf="@+id/textField" />

    <ProgressBar
        android:id="@+id/loadingCircle"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/completeButton"
        app:layout_constraintEnd_toEndOf="@+id/completeButton"
        app:layout_constraintStart_toStartOf="@+id/completeButton" />

</androidx.constraintlayout.widget.ConstraintLayout>